--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
     "sass": "^1.90.0",
-    "styled-components": "^6.1.19"
+    "styled-components": "^6.1.19",
+    "swr": "^2.3.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
