--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "dependencies": {
     "@loadable/component": "^5.16.7",
     "classnames": "^2.5.1",
-    "next": "15.4.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "next": "^15.4.7",
+    "react": "^19.1.1",
+    "react-cookie": "^8.0.1",
+    "react-dom": "^19.1.1",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
     "sass": "^1.90.0",
