환경행사 목록

--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "@loadable/component": "^5.16.7",
     "classnames": "^2.5.1",
-    "next": "15.4.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "next": "^15.5.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
     "sass": "^1.90.0",
@@ -28,5 +28,9 @@
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
     "typescript": "^5"
-  }
+  },
+  "main": "index.js",
+  "repository": "https://github.com/vinllage/vinllage-fe.git",
+  "author": "songmikim <ksm0200@gmail.com>",
+  "license": "MIT"
 }
