--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "dependencies": {
     "@loadable/component": "^5.16.7",
     "classnames": "^2.5.1",
-    "next": "15.4.6",
+    "next": "15.5.0",
     "pm2": "^6.0.8",
     "react": "19.1.0",
+    "react-cookie": "^8.0.1",
     "react-dom": "19.1.0",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
