--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "react-dom": "19.1.0",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
+    "react-modal": "^3.16.3",
     "sass": "^1.90.0",
     "styled-components": "^6.1.19",
-    "swr": "^2.3.6"
+    "swr": "^2.3.6",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
