게시판 리스트

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -16,11 +16,11 @@
     "classnames": "^2.5.1",
     "date-fns": "^4.1.0",
     "js-cookie": "^3.0.5",
-    "next": "15.5.0",
+    "next": "^15.5.0",
     "pm2": "^6.0.8",
-    "react": "19.1.0",
+    "react": "^19.1.1",
     "react-cookie": "^8.0.1",
-    "react-dom": "19.1.0",
+    "react-dom": "^19.1.1",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.6.0",
