--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -11,25 +11,19 @@
   },
   "dependencies": {
     "@loadable/component": "^5.16.7",
-    "@types/js-cookie": "^3.0.6",
-    "axios": "^1.11.0",
     "classnames": "^2.5.1",
-    "date-fns": "^4.1.0",
-    "js-cookie": "^3.0.5",
-    "next": "^15.5.0",
+    "next": "15.5.0",
     "pm2": "^6.0.8",
-    "react": "^19.1.1",
+    "react": "19.1.0",
     "react-cookie": "^8.0.1",
-    "react-dom": "^19.1.1",
+    "react-dom": "19.1.0",
     "react-helmet-async": "^2.0.5",
-    "react-hook-form": "^7.62.0",
-    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
-    "react-quill": "^2.0.0",
-    "react-spinners": "^0.17.0",
+    "react-modal": "^3.16.3",
     "sass": "^1.90.0",
     "styled-components": "^6.1.19",
-    "swr": "^2.3.6"
+    "swr": "^2.3.6",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
