--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "server": "pm2 start server.config.js"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-react": "^11.0.0",
     "@loadable/component": "^5.16.7",
     "chart.js": "^4.5.0",
+    "ckeditor5": "^46.0.2",
     "classnames": "^2.5.1",
+    "immer": "^10.1.1",
     "next": "^15.5.0",
     "pm2": "^6.0.8",
     "react": "^19.1.0",
