--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chart.js": "^4.5.0",
     "ckeditor5": "^46.0.2",
     "classnames": "^2.5.1",
+    "date-fns": "^4.1.0",
     "immer": "^10.1.1",
     "next": "^15.5.0",
     "pm2": "^6.0.8",
