--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
     "react-modal": "^3.16.3",
+    "react-spinners": "^0.17.0",
     "sass": "^1.90.0",
     "styled-components": "^6.1.19",
     "sweetalert2": "^11.22.4",
