--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "server": "pm2 start server.config.js"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^44.3.0",
     "@ckeditor/ckeditor5-react": "^11.0.0",
     "@loadable/component": "^5.16.7",
     "chart.js": "^4.5.0",
