--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "classnames": "^2.5.1",
     "date-fns": "^4.1.0",
     "immer": "^10.1.1",
+    "motion": "^12.23.12",
     "next": "^15.5.0",
     "pm2": "^6.0.8",
     "react": "^19.1.0",
