--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ckeditor5": "^46.0.2",
     "classnames": "^2.5.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.12",
     "immer": "^10.1.1",
     "motion": "^12.23.12",
     "next": "^15.5.0",
